--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,4 +22,7 @@
   {% endcapture %}
   {{ include_to_scssify | scssify }}
   </style>
+  <script type="text/javascript" async
+  src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
+  </script>
 </head>
